Updated refreshing token and checked call request to api with authorization.
